--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
-appdirs==1.4.4
-cycler==0.10.0
-distlib==0.3.1
-filelock==3.0.12
-graphics.py==5.0.1.post1
-kiwisolver==1.3.1
-matplotlib==3.4.1
-numpy==1.20.2
-opencv-python==4.5.1.48
+asgiref==3.3.4
+boto3==1.17.89
+botocore==1.20.89
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+defusedxml==0.7.1
+Django==3.2.3
+django-allauth==0.44.0
+django-disqus==0.5
+django-storages==1.11.1
+idna==2.10
+jmespath==0.10.0
+mock==4.0.3
+oauthlib==3.1.1
 Pillow==8.2.0
-pygame==2.0.1
-pyparsing==2.4.7
+pycparser==2.20
+PyJWT==2.1.0
+PyMySQL==1.0.2
 python-dateutil==2.8.1
-six==1.15.0
-virtualenv==20.4.6
+python3-openid==3.2.0
+pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+s3transfer==0.4.2
+six==1.16.0
+sqlparse==0.4.1
+urllib3==1.26.5
